--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mejores coches baratos de segunda mano</title>
+    <link rel="favicon" href=..Marcas-Dam/coche.png type="image/png">
 <meta name="description" content="">
 
 
