--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mejores coches de segunda mano</title>
-    <link rel="favicon" href=..Marcas-Dam/coche.png type="image/png">
+    <link rel="icon" href="../Coches/imagen/coche.png" type="image/png">
 <meta name="description" content="">
 
 
