--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mejores coches de segunda mano</title>
-    <link rel="icon" href="../Coches/imagen/coche.png" type="image/png">
+    <title>Mejores coches de segunda mano.</title>
+    <link rel="icon" href="../Coches/imagen/coche.png" type ="image/png">
+    
 <meta name="description" content="">
 
 
 </head>
 <body>
-    <h1>Coches de segunda mano baratos</h1>
+    <h1>Coches de segunda mano baratos y potentes</h1>
     <p>Pagina en construccion</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga! </p>
+    <img src="../Coches/imagen/accord.png">
+    <img src="../Coches/imagen/scirocco.png">
+    <img src="../Coches/imagen/saab.png">
+    <img src="../Coches/imagen/passat.png">
 </body>
 </html>
