--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mejores coches de segunda mano.</title>
-    <link rel="icon" href="../Coches/imagen/coche.png" type ="image/png">
-    <link rel="stylesheet" href="../Coches/Coches.css">
+    <link rel="icon" href="imagen/coche.png" type ="image/png">
+    <link rel="stylesheet" href="Coches.css">
     
 <meta name="description" content="">
 
@@ -32,12 +32,12 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
     </p>
-<figure><img src="../Coches/imagen/accord.png"></figure>
-<figure><img src="../Coches/imagen/scirocco.png"></figure>
-<figure> <img src="../Coches/imagen/saab.png"></figure>
-<figure><img src="../Coches/imagen/passat.png"></figure>
-<figure><img src="../Coches/imagen/leon.jpg"></figure>
-<figure><img src="../Coches/imagen/focus.jpg"></figure>
+<figure><img src="imagen/accord.png"></figure>
+<figure><img src="imagen/scirocco.png"></figure>
+<figure> <img src="imagen/saab.png"></figure>
+<figure><img src="imagen/passat.png"></figure>
+<figure><img src="imagen/leon.jpg"></figure>
+<figure><img src="imagen/focus.jpg"></figure>
     <figurecaption>Coches coches</figurecaption>
 
 </body>
