--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="imagen/coche.png" type ="image/png">
     <link rel="stylesheet" href="Coches.css">
     
-<meta name="description" content="">
+<meta name="description" content="Web dedicada a los coches de segunda mano">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,21 +28,23 @@
     </ol>
     </nav>
 </header>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
+<main>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga! 
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
     </p>
-<figure><img src="imagen/accord.png"></figure>
-<figure><img src="imagen/scirocco.png"></figure>
-<figure> <img src="imagen/saab.png"></figure>
-<figure><img src="imagen/passat.png"></figure>
-<figure><img src="imagen/leon.jpg"></figure>
-<figure><img src="imagen/focus.jpg"></figure>
+<figure><img src="../MARCAS_DAM/imagenes/accord.webp" alt="Foto honda accord"></figure>
+<figure><img src="../MARCAS_DAM/imagenes/focus.webp" alt="Foto ford focus"></figure>
+<figure> <img src="../MARCAS_DAM/imagenes/leon.webp" alt="Foto seat leon"></figure>
+<figure><img src="../MARCAS_DAM/imagenes/passat.webp" alt="Foto passat"></figure>
+<figure><img src="../MARCAS_DAM/imagenes/saab.webp" alt="Foto saab"></figure>
+<figure><img src="../MARCAS_DAM/imagenes/scirocco.webp" alt="Foto scirocco"></figure>
 <figurecaption>Coches coches</figurecaption>
 <div>
+   <div id="unoo">
     <h2>Honda</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex illo nam fuga id, corrupti maiores dolores omnis dolorem esse tenetur architecto? Nisi iure ullam nobis quisquam tempore, laudantium suscipit obcaecati.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga suscipit eaque repellat iure maxime laboriosam incidunt sunt dicta inventore sint quos, labore illum impedit dolorem reiciendis! Enim, incidunt optio! Nisi?</p>
@@ -54,11 +56,22 @@
     <h2>Volkswagen</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex illo nam fuga id, corrupti maiores dolores omnis dolorem esse tenetur architecto? Nisi iure ullam nobis quisquam tempore, laudantium suscipit obcaecati.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga suscipit eaque repellat iure maxime laboriosam incidunt sunt dicta inventore sint quos, labore illum impedit dolorem reiciendis! Enim, incidunt optio! Nisi?</p>
-
+    </div>
+    <div id="doss">
     <h2>Seat</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex illo nam fuga id, corrupti maiores dolores omnis dolorem esse tenetur architecto? Nisi iure ullam nobis quisquam tempore, laudantium suscipit obcaecati.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga suscipit eaque repellat iure maxime laboriosam incidunt sunt dicta inventore sint quos, labore illum impedit dolorem reiciendis! Enim, incidunt optio! Nisi?</p>
+
+    <h2>Ford</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex illo nam fuga id, corrupti maiores dolores omnis dolorem esse tenetur architecto? Nisi iure ullam nobis quisquam tempore, laudantium suscipit obcaecati.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga suscipit eaque repellat iure maxime laboriosam incidunt sunt dicta inventore sint quos, labore illum impedit dolorem reiciendis! Enim, incidunt optio! Nisi?</p>
+    
+    <h2>Scirocco</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex illo nam fuga id, corrupti maiores dolores omnis dolorem esse tenetur architecto? Nisi iure ullam nobis quisquam tempore, laudantium suscipit obcaecati.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga suscipit eaque repellat iure maxime laboriosam incidunt sunt dicta inventore sint quos, labore illum impedit dolorem reiciendis! Enim, incidunt optio! Nisi?</p>
+ </div>
 </div>
+
 <nav>
     <ol class="dos">
 
@@ -76,6 +89,11 @@
 
     </ol>
  </nav>   
-
 </body>
+</main>
+<footer>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae excepturi corrupti, officiis enim deserunt eaque, autem adipisci, praesentium consequuntur tempora iusto magni architecto quia. Architecto necessitatibus rerum vel quibusdam. Culpa.
+    </p>
+</footer>
 </html>
