--- a/index.html
+++ b/index.html
@@ -29,20 +29,19 @@
     </nav>
 </header>
 <main>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
+<p>Porem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga! 
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsa dolore. Vero facere perspiciatis commodi maiores soluta ex earum, molestiae at blanditiis iste provident nesciunt alias doloribus aliquid modi? Fuga!
     </p>
-<figure><img src="../MARCAS_DAM/imagenes/accord.webp" alt="Foto honda accord"></figure>
-<figure><img src="../MARCAS_DAM/imagenes/focus.webp" alt="Foto ford focus"></figure>
-<figure> <img src="../MARCAS_DAM/imagenes/leon.webp" alt="Foto seat leon"></figure>
-<figure><img src="../MARCAS_DAM/imagenes/passat.webp" alt="Foto passat"></figure>
-<figure><img src="../MARCAS_DAM/imagenes/saab.webp" alt="Foto saab"></figure>
-<figure><img src="../MARCAS_DAM/imagenes/scirocco.webp" alt="Foto scirocco"></figure>
-<figurecaption>Coches coches</figurecaption>
+<figure><img src="../imagen/accord.webp" alt="Foto honda accord"></figure>
+<figure><img src="../imagen/focus.webp" alt="Foto ford focus"></figure>
+<figure> <img src="../imagen/leon.webp" alt="Foto seat leon"></figure>
+<figure><img src="../imagen/passat.webp" alt="Foto passat"></figure>
+<figure><img src="../imagen/saab.webp" alt="Foto saab"></figure>
+<figure><img src="../imagen/scirocco.webp" alt="Foto scirocco"></figure>
 <div>
    <div id="unoo">
     <h2>Honda</h2>
