--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="coches, motor,segunda mano,coche barato, automovil, coches segunda mano, coches baratos, comprar coche segunda mano ">
     <title>Mejores coches de segunda mano.</title>
     <link rel="icon" href="imagen/coche.png" type ="image/png">
-    <link rel="stylesheet" href="prueba.css">
+    <link rel="stylesheet" href="Coches.css">
     <meta name="description" content="Web dedicada a los coches de segunda mano">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
