--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         content="coches, motor,segunda mano,coche barato, automovil, coches segunda mano, coches baratos, comprar coche segunda mano ">
     <title>Mejores coches de segunda mano.</title>
     <link rel="icon" href="imagen/coche.png" type="image/png">
-    <link rel="stylesheet" href="Coches (2).css">
+    <link rel="stylesheet" href="coches.css">
     <meta name="description" content="Web dedicada a los coches de segunda mano">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
