--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                 <h1>Mi Sitio Web</h1>
             </div>
             <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#servicios">Servicios</a></li>
-                <li><a href="#nosotros">Nosotros</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a>Inicio</a></li>
+                <li><a >Servicios</a></li>
+                <li><a>Nosotros</a></li>
+                <li><a >Blog</a></li>
+                <li><a >Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -468,11 +468,11 @@
 <footer>
     <div class="footer-container">
         <nav class="footer-nav">
-            <a href="#inicio">Ford</a>
-            <a href="#servicios">Honda</a>
-            <a href="#sobre-nosotros">Volkswagen</a>
-            <a href="#contacto">Seat</a>
-            <a href="#politicas">SAAB</a>
+            <a >Ford</a>
+            <a >Honda</a>
+            <a >Volkswagen</a>
+            <a >Seat</a>
+            <a >SAAB</a>
         </nav>
 
         <div class="footer-bottom">
